--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/jthhn/Learn_javaScript#readme",
   "dependencies": {
-    "prompt": "^1.3.0"
+    "prompt-sync": "^4.2.0"
   }
 }
